infra/app-of-apps/mgmt-dashboard/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mgmt-dashboard
  namespace: mgmt-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "mgmt.brandwhisper.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mgmt-dashboard
          port: 3000
          weight: 1
